nav data/pdf updates

--- a/Web/Pages/CCGMember/Similar/SimilarDetails.cshtml
+++ b/Web/Pages/CCGMember/Similar/SimilarDetails.cshtml
@@ -18,8 +18,11 @@
         {"certificates", Model.Certificates },
         {"sameorhigherlevels", Model.SameOrHigherLevels },
         {"percentmatch", Model.PercentMatch },
-        {"previouspagedetails", Model.PreviousPageDetails} };
-   
+        {"previouspagedetails", Model.PreviousPageDetails },
+        { "previouspage", Model.PreviousPage}
+
+};
+
 }
     <section role="contentinfo">
         <form method="post">
