--- a/Web/Pages/CCGMember/Similar/SimilarList.cshtml
+++ b/Web/Pages/CCGMember/Similar/SimilarList.cshtml
@@ -12,6 +12,7 @@
         {"certificates", Model.Certificates },
         {"sameorhigherlevels", Model.SameOrHigherLevels },
         {"percentmatch", Model.PercentMatch },
+        {"previouspage", Model.PreviousPage }
     };
     var countmessage = Model.Positions.Length != 1 ? "POSITIONS" : "POSITION";
 }
@@ -46,7 +47,8 @@
         {"certificates", Model.Certificates },
         {"sameorhigherlevels", Model.SameOrHigherLevels },
         {"percentmatch", Model.PercentMatch },
-        {"previouspagedetails", Model.PreviousPageDetails }
+        {"previouspagedetails", Model.PreviousPageDetails },
+        {"previouspage", Model.PreviousPage }
         };
 
                 <tr>
